# iris

./: codex.md  config.toml  pyproject.toml
.devcontainer/: devcontainer.json
src/ffmpeg_agent/: agent.py  api.py  providers_async.py  providers_sync.py  settings.py  tools.py
src/ffmpeg_agent/memory/: sqlite_vector.py  summary.py  window.py
tests/: test_memory_vector.py  test_settings.py  test_tools.py
